# eda-infra-rs

./: .gitignore  Cargo.toml
dcsr/: .gitignore  Cargo.toml  build.rs
dcsr/csrc/: test_helpers.cu
dcsr/csrc/dcsr/: compact.cu  dcsr.cpp  dcsr.hpp  dcsr_capi.h  dcsr_view.h  dcsr_view_helpers.cuh
dcsr/csrc/utils/: cuda-utils.cu  cuda-utils.hpp  heteromem.hpp  mempool.hpp  timer.hpp
dcsr/src/: dcsr.rs  flatmem.rs  lib.rs  policy.rs
dcsr/tests/: benchmark_config.json  benchmark_config_full.json  benchmark_config_small.json  benchmark_config_test.json  dcsr_test.rs  flatmem_test.rs  policy_compare_test.rs  policy_test.rs  speed_bench.rs  speed_test.rs  stress_test.rs
netlistdb/: Cargo.toml
netlistdb/src/: builder.rs  csr.rs  lib.rs
netlistdb/tests/: eco_api_tests.rs  simple.rs
ucc/src/: compile.rs
ulib/src/: lib.rs  uvec.rs
