[package]
name = "dcsr"
version = "0.2.0"
edition = "2021"
description = "A fully decoupled Dynamic CSR library for CPU/GPU heterogeneous graph data"
authors = ["Haichuan Liu <LHaiC@outlook.com>"]

[dependencies]
clilog = { version = "0.2.5", path = "../clilog" }
ulib = { version = "0.3.13", path = "../ulib" }
ucc = { version = "0.2.6", path = "../ucc", optional = true }

[features]
default = ["cuda"]
cuda = ["ulib/cuda", "ucc"]

[dev-dependencies]
rand = "0.8"
cust = { version = "0.3.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
ucc = { version = "0.2.6", path = "../ucc", optional = true }